--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,5 +1,5 @@
 {{#each saved}}
-	<div data-_id=5d095edf1100920015e53636 class="card">
+	<div data-_id="{{this._id}}" class="card">
       <div class="card-header">
         <h3>
           <a class="article-link" target="_blank" rel="noopener noreferrer" href="https://www.nytimes.com/{{this.link}}">{{this.title}}</a>
